apps/changedetection/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  labels:
    app.kubernetes.io/name: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: changedetection
  template:
    metadata:
      labels:
        app.kubernetes.io/name: changedetection
    spec:
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:latest
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: datastore
              mountPath: /datastore
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
      volumes:
        - name: datastore
          persistentVolumeClaim:
            claimName: changedetection-datastore
