apps/changedetection/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  labels:
    app.kubernetes.io/name: changedetection
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app.kubernetes.io/name: changedetection
