apps/changedetection/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Change Detection
    gethomepage.dev/description: Website Change Monitoring
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: changedetection-io
    gethomepage.dev/href: https://changedetection.cyphers.app
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`changedetection.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: changedetection
          namespace: changedetection
          port: 5000
  tls:
    secretName: production-cyphers-app-tls
